@@ -16,7 +16,6 @@ import org.slf4j.LoggerFactory;
  * servlet:
  *
  * <ul>
- *   <li>poolType - BLOCKING or SOFTLIMIT</li>
  *   <li>searchExecutorClass - fully qualified class name that implements ServletSearchExecutor</li>
  * </ul>
  *
@@ -61,13 +60,14 @@ public final class SearchServlet extends HttpServlet
     if (searchExecutorClass != null) {
       try {
         logger.debug("Creating search executor: {}", searchExecutorClass);
-        searchExecutor = (ServletSearchExecutor) Class.forName(searchExecutorClass).newInstance();
+        searchExecutor = (ServletSearchExecutor) Class.forName(
+          searchExecutorClass).getDeclaredConstructor().newInstance();
       } catch (Exception e) {
         logger.error("Error instantiating {}", searchExecutorClass, e);
         throw new IllegalStateException(e);
       }
     } else {
-      searchExecutor = new Dsmlv1ServletSearchExecutor();
+      searchExecutor = new LdifServletSearchExecutor();
     }
     searchExecutor.initialize(config);
   }
